<resources>
    <string name="app_name">mesh-net</string>
    <string name="title_activity_main">Mesh Net</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Meshnet Android</string>
    <string name="nav_header_subtitle">Alfred.Manville@city.ac.uk</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="about_info">Mesh Net (Lib) © Alfred Manville BSD-3-Clause License
        Bouncy Castle © The Legion of the Bouncy Castle Inc MIT License
        Android Core/x Libraries © Google Inc. and Contributors MIT License
    </string>

    <string name="menu_settings">Settings</string>
    <string name="menu_node_browser">Node Topology</string>
    <string name="menu_allowed_nodes">Allowed Nodes</string>
    <string name="menu_blocked_nodes">Blocked Nodes</string>
    <string name="menu_allowed_keys">Allowed Keys</string>
    <string name="menu_peer_requests">Peering Requests</string>
    <string name="menu_about">About</string>

    <string name="error_channel">Error Channel</string>
    <string name="error_channel_desc">Shows Exceptions.</string>
    <string name="peer_channel">Peering Request Channel</string>
    <string name="peer_channel_desc">Shows Peering Requests.</string>
    <string name="node_info_channel_desc">Shows Node Information</string>
    <string name="node_info_channel">Node Info</string>
    <string name="vpn_channel">MeshNet VPN</string>
    <string name="vpn_channel_desc">MeshNet VPN Foreground Notification</string>
    <string name="title_activity_editor">Adder / Viewer</string>

    <string name="check_code">Check Code</string>
    <string name="editor_allowed_node">Allowed Node</string>
    <string name="editor_blocked_node">Blocked Node</string>
    <string name="editor_allowed_key">Allowed Key</string>
    <string name="editor_peer_request">Peering Request</string>
    <string name="editor_add">Add</string>
    <string name="editor_view">View</string>
    <string name="editor_key">Public Key</string>
    <string name="editor_id">ID</string>
    <string name="close">Close</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="delete">Delete</string>

    <string name="settings_enable">Toggle Network</string>
    <string name="settings_keygen">New Keys</string>
    <string name="settings_packet_cache">Packet Cache Size</string>
    <string name="settings_max_ttl">Max TTL</string>
    <string name="settings_excluded_addr">Excluded Addresses</string>
    <string name="settings_rec_pub">Recommendation Key</string>
    <string name="settings_rec_sig">Recommendation Signature</string>
    <string name="settings_gateway">Route through Gateway</string>
    <string name="settings_encryption_mode">E2E is</string>
    <string name="settings_onion">Onion Mode</string>
    <string name="settings_new_circuit">New Circuit</string>
    <string name="settings_bluetooth">Bluetooth Transport</string>
    <string name="settings_wifi_direct">Wi-Fi Direct Transport</string>
    <string name="settings_discover">Discover</string>
    <string name="settings_announce">Announce</string>
    <string name="settings_test">Test Mode</string>

    <string name="vpn_starting">VPN Starting…</string>
    <string name="vpn_stopping">VPN Stopping…</string>
    <string name="vpn_running">VPN Active</string>
    <string name="vpn_stopped">VPN Inactive</string>
</resources>